--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/plutovr/eslint-config-pluto"
-	}
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/plutovr/eslint-config-pluto"
+  },
+  "peerDependencies": {
+    "eslint": "4.x"
+  },
+  "devDependencies": {
+    "eslint": "^4.3.0"
+  }
 }
