--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "url": "https://github.com/plutovr/eslint-config-pluto"
   },
   "peerDependencies": {
-    "eslint": "5.x"
+    "eslint": ">= 5"
   },
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "eslint": "^7.7.0"
   }
 }
