--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-pluto",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "Shared eslint configuration",
   "main": "index.js",
   "author": "",
@@ -10,9 +10,9 @@
     "url": "https://github.com/plutovr/eslint-config-pluto"
   },
   "peerDependencies": {
-    "eslint": "5.x"
+    "eslint": ">= 5"
   },
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "eslint": "^7.7.0"
   }
 }
