--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "url": "https://github.com/plutovr/eslint-config-pluto"
   },
   "peerDependencies": {
-    "eslint": ">= 5"
+    "eslint": ">= 7",
+    "@babel/eslint-parser": "^7.16.5"
   },
   "devDependencies": {
-    "eslint": "^7.26.0"
+    "eslint": "^8.6.0"
   }
 }
